--- a/docs/src/man/man1/sim-torch.1.adoc
+++ b/docs/src/man/man1/sim-torch.1.adoc
@@ -17,28 +17,27 @@ _VERSION:_ +
 
 == PINS
 
-*sim-torch-rt.cut-noise-in float in (default: _0.75_)*::
+*sim-torch-rt.cut-noise-in* float in (default: _0.75_)::
   the maximum amount of noise during cutting (volts)
-*sim-torch-rt.cycles-in s32 in (default: _200_)*::
-  the number of cycles that the arc voltage overshoots the cut voltage
-  (cycles)
-*sim-torch-rt.on-delay-in s32 in (default: _10_)*::
+*sim-torch-rt.cycles-in* s32 in*::
+  the number of cycles that the arc voltage overshoots the cut voltage (cycles)
+  (default: _200_)
+*sim-torch-rt.on-delay-in* s32 in*::
   the time from turn on until overshoot begins (cycles)
-*sim-torch-rt.offset-in float in *::
+  (default: _10_)
+*sim-torch-rt.offset-in* float in::
   the cut voltage offset(volts)
-*sim-torch-rt.overshoot-in s32 in (default: _50_)*::
-  the percentage of the cut voltage that the arc voltage overshoots
-  (percent)
-*sim-torch-rt.ramp-noise-in float in (default: _5_)*::
+*sim-torch-rt.overshoot-in* s32 in::
+  the percentage of the cut voltage that the arc voltage overshoots (percent)
+  (default: _50_)
+*sim-torch-rt.ramp-noise-in* float in (default: _5_)*::
   the maximum amount of noise during overshoot (volts)
 *sim-torch-rt.ramp-up-in s32 in (default: _80_)*::
   percent of 'cycles_in' that the arc voltage ramps up (percent)
-*sim-torch-rt.start bit in *::
-  start the arc
-*sim-torch-rt.voltage-in float in (default: _100_)*::
-  the cut voltage (volts)
-*sim-torch-rt.voltage-out float out *::
-  output voltage (volts)
+*sim-torch-rt.start* bit in:: start the arc
+*sim-torch-rt.voltage-in* float in:: the cut voltage (volts)
+  (default: _100_)
+*sim-torch-rt.voltage-out* float out:: output voltage (volts)
 
 == AUTHOR
 
