--- a/docs/src/getting-started/getting-linuxcnc.adoc
+++ b/docs/src/getting-started/getting-linuxcnc.adoc
@@ -331,7 +331,7 @@ uname -v
   document.
 
 . Add the LinuxCNC Archive Signing Key to your apt keyring by downloading
-  [the LinuxCNC installer script](https://www.linuxcnc.org/linuxcnc-install.sh)
+  [the LinuxCNC installer script](https://www.linuxcnc.org/linuxcnc-install.sh).
   You will need to make the script executable to run it:
 +
 ----
@@ -351,8 +351,8 @@ sudo ./linuxcnc-install.sh
   install, or alternatively on a fresh Install of Debian Bookworm 64-bit
   as described above.
 . You can add the LinuxCNC archive signing key and repository information
-  by downloading and running the installer script as described above. If
-  an RTAI kernel is detected it will stop before installing any packages.
+  by downloading and running the installer script as described above.
+  If an RTAI kernel is detected it will stop before installing any packages.
 . Update the package list from linuxcnc.org
 +
 ----
@@ -363,8 +363,7 @@ sudo apt-get update
 ----
 sudo apt-get install linuxcnc
 ----
-Reboot the machine, ensuring that the system boots from the new 5.4.258-rtai
-kernel.
+Reboot the machine, ensuring that the system boots from the new 5.4.258-rtai kernel.
 
 === Installing on Raspbian 12
 
