--- a/docs/src/man/man1/moveoff_gui.1.adoc
+++ b/docs/src/man/man1/moveoff_gui.1.adoc
@@ -6,19 +6,19 @@ moveoff_gui - a GUI for the moveoff component
 
 == SYNOPSIS
 
-*moveoff_gui *[--help* | -- -h | -?]*
+*moveoff_gui* [*--help* | -- *-h* | *-?]
 
-*moveoff_gui [*options*]*
+*moveoff_gui* [_options_]
 
 == DESCRIPTION
 
 Moveoff_gui is a sample graphical user interface (GUI) for controlling a
-HAL moveoff component to implement HAL-only offsets. See the manpage
-(man moveoff) for *IMPORTANT* limitations and warnings.
+HAL moveoff component to implement HAL-only offsets.
+See the manpage (man moveoff) for *IMPORTANT* limitations and warnings.
 
 Supported configurations must use a known kinematics module with
-*KINEMATICS_TYPE = KINEMATICS_IDENTITY*. The modules currently supported
-are: *trivkins*
+`KINEMATICS_TYPE = KINEMATICS_IDENTITY`.
+The modules currently supported are: *trivkins*
 
 == OPTIONS
 
@@ -85,28 +85,29 @@ These options are available for special cases:
 
 LinuxCNC must be running.
 
-Halui must be loaded, typical INI file setting: *[HAL]HALUI = halui*.
+Halui must be loaded, typical INI file setting:
+```
+[HAL]
+HALUI = halui
+```
 
 The moveoff component must be loaded with the name 'mv' as: +
-*loadrt moveoff names=mv personality=number_of_axes*
+**loadrt moveoff names=**_mv **personality=**_number_of_axes_
 
-If the pin mv.motion-enable is *not* connected when moveoff_gui is
-started, *controls will be provided* to enable offsets and set offset
-values. If the pin *is* connected, *only a display* of offsets is shown
+If the pin mv.motion-enable is *not* connected when moveoff_gui is started,
+*controls will be provided* to enable offsets and set offset values.
+If the pin *is* connected, *only a display* of offsets is shown
 and control must be made by *external* HAL connections.
 
-If a pin named *.resume-inhibit exists and is not connected, it will be
-set while offsets are applied. This pin may be provided by the
-controlling LinuxCNC GUI in use. Use of the pin may be disabled with the
-option -no_resume_inhibit.
+If a pin named `*.resume-inhibit` exists and is not connected, it will be set while offsets are applied.
+This pin may be provided by the controlling LinuxCNC GUI in use.
+Use of the pin may be disabled with the option -no_resume_inhibit.
 
-The -autoresume option uses halui.program.resume to automatically resume
-program execution when the move-enable pin is deactivated and all
-offsets are removed. The resume pin is not activated until an additional
-interval (-delay delay_secs) elapses. This delay interval may be useful
-for restarting related equipment (a spindle motor for example) While
-timing the delay, a popup is offered to cancel the automatic program
-resumption.
+The -autoresume option uses `halui.program.resume` to automatically resume
+program execution when the move-enable pin is deactivated and all offsets are removed.
+The resume pin is not activated until an additional interval (-delay delay_secs) elapses.
+This delay interval may be useful for restarting related equipment (a spindle motor for example).
+While timing the delay, a popup is offered to cancel the automatic program resumption.
 
 == USAGE
 
@@ -116,37 +117,42 @@ write functions in the proper order. These steps can be done at runtime
 using an existing configuration INI file and specifying a system library
 HALFILE *hookup_moveoff.tcl* as illustrated below:
 
-*[HAL]* +
-HALUI = halui +
-HALFILE = user_halfile_1 +
-etc ... +
-HALFILE = user_halfile_n +
-*HALFILE = LIB:hookup_moveoff.tcl*
+```
+[HAL]
+HALUI = halui
+HALFILE = user_halfile_1
+etc ...
+HALFILE = user_halfile_n
+HALFILE = LIB:hookup_moveoff.tcl
+```
 
-The *hookup_moveoff.tcl* HAL file will use INI file settings for the
-moveoff component control pins:
+The `hookup_moveoff.tcl` HAL file will use INI file settings for the moveoff component control pins:
 
-*[OFFSET]* +
-EPSILON = +
-WAYPOINT_SAMPLE_SECS = +
-WAYPOINT_THRESHOLD = +
+```
+[OFFSET]
+EPSILON =
+WAYPOINT_SAMPLE_SECS =
+WAYPOINT_THRESHOLD =
 BACKTRACK_ENABLE =
+```
 
-The *hookup_moveoff.tcl* will use INI file settings for the moveoff
-per-axis limits:
+The *hookup_moveoff.tcl* will use INI file settings for the moveoff per-axis limits:
 
-*[AXIS_m]* +
-OFFSET_MAX_VELOCITY = +
-OFFSET_MAX_ACCELERATION = +
-OFFSET_MAX_LIMIT = +
+```
+[AXIS_m]
+OFFSET_MAX_VELOCITY =
+OFFSET_MAX_ACCELERATION =
+OFFSET_MAX_LIMIT =
 OFFSET_MIN_LIMIT =
+```
 
-The moveoff_gui program should be specified in the APPLICATIONS stanza
-of the INI file, for example:
+The moveoff_gui program should be specified in the APPLICATIONS stanza of the INI file, for example:
 
-*[APPLICATIONS]* +
-DELAY = delay_in_secs_to_allow_hal_connections +
-*APP = moveoff_gui -option1 -option2 ...*
+```
+[APPLICATIONS]
+DELAY = delay_in_secs_to_allow_hal_connections
+APP = moveoff_gui -option1 -option2 ...
+```
 
 == SEE ALSO
 
