--- a/docs/src/man/man1/pmx485.1.adoc
+++ b/docs/src/man/man1/pmx485.1.adoc
@@ -6,7 +6,7 @@ pmx485 - Modbus communications with a Powermax Plasma Cutter.
 
 == SYNOPSIS
 
-*loadusr -Wn pmx485 pmx485 /dev/ttyUSB0* +
+*loadusr* -Wn pmx485 pmx485 /dev/ttyUSB0
 
 == DESCRIPTION
 
