--- a/docs/src/man/man1/pyvcp.1.adoc
+++ b/docs/src/man/man1/pyvcp.1.adoc
@@ -6,17 +6,17 @@ pyvcp - Virtual Control Panel for LinuxCNC
 
 == SYNOPSIS
 
-*pyvcp* [-g _WxH+X+Y_] [-c _component-name_] _myfile.xml_
+*pyvcp* [*-g* _WxH+X+Y_] [*-c* _component-name_] _myfile.xml_
 
 == OPTIONS
 
 *-g* _WxH+X+Y_::
-  This sets the initial geometry of the root window. Use 'WxH' for just
-  size, '+X+Y' for just position, or 'WxH+X+Y' for both. Size / position
-  use pixel units. Position is referenced from top left.
+  This sets the initial geometry of the root window.
+  Use 'WxH' for just size, '+X+Y' for just position, or 'WxH+X+Y' for both.
+  Size / position use pixel units. Position is referenced from top left.
 *-c* _component-name_::
-  Use _component-name_ as the HAL component name. If the component name
-  is not specified, the basename of the XML file is used.
+  Use _component-name_ as the HAL component name.
+  If the component name is not specified, the basename of the XML file is used.
 
 == SEE ALSO
 
