--- a/docs/src/man/man1/qtplasmac_gcode.1.adoc
+++ b/docs/src/man/man1/qtplasmac_gcode.1.adoc
@@ -2,13 +2,11 @@
 
 == NAME
 
-qtplasmac_gcode - A python script that is part of Plasmac, a Plasma
-cutting system.
+qtplasmac_gcode - Python script shipping with Plasmac, a Plasma cutting system.
 
 == DESCRIPTION
 
-*qtplasmac_gcode* is used by qtplasmac and is not intended to be used
-standalone.
+*qtplasmac_gcode* is used by qtplasmac and is not intended to be used standalone.
 
 See the QtPlasmaC section of the LinuxCNC Documentation for more
 information. http://linuxcnc.org/docs/devel/html/plasma/qtplasmac.html
