--- a/docs/src/man/man1/rs274.1.adoc
+++ b/docs/src/man/man1/rs274.1.adoc
@@ -6,7 +6,7 @@ rs274 - standalone G-code interpreter
 
 == SYNOPSIS
 
-*rs274 [-p interp.so] [-t tool.tbl] [-v var-file.var] [-n 0|1|2]* [-b] [-s] [-g] [input file [output file]]
+*rs274* [*-p* interp.so] [*-t* tool.tbl] [*-v* var-file.var] [*-n* 0|1|2] [*-b*] [*-s*] [*-g*] [ __input_file__ [__output_file__] ]
 
 == DESCRIPTION
 
@@ -14,13 +14,21 @@ rs274 - standalone G-code interpreter
 
 Usage: rs274 [-p interp.so] [-t tool.tbl] [-v var-file.var] [-n 0|1|2] [-b] [-s] [-g] [input file [output file]]
 
--p: Specify the pluggable interpreter to use -t: Specify the .tbl (tool
-table) file to use -v: Specify the .var (parameter) file to use -n:
-Specify the continue mode: 0: continue 1: enter MDI mode 2: stop
-(default) -b: Toggle the 'block delete' flag (default: OFF) -s: Toggle
-the 'print stack' flag (default: OFF) -g: Toggle the 'go (batch mode)'
-flag (default: OFF) -i: specify the .ini file (default: no ini file) -T:
-call task_init() -l: specify the log_level (default: -1)
+== OPTIONS
+
+-p:: Specify the pluggable interpreter to use
+-t:: Specify the .tbl (tool table) file to use
+-v:: Specify the .var (parameter) file to use
+-n:: Specify the continue mode: +
+  0: continue +
+  1: enter MDI mode +
+  2: stop (default)
+-b:: Toggle the 'block delete' flag (default: OFF)
+-s:: Toggle the 'print stack' flag (default: OFF)
+-g:: Toggle the 'go (batch mode)' flag (default: OFF)
+-i:: specify the .ini file (default: no ini file)
+-T:: call task_init()
+-l:: specify the log_level (default: -1)
 
 == EXAMPLE
 
@@ -28,13 +36,27 @@ To see the output of a loop for example we can run rs274 on the
 following file and see that the loop never ends. To break out of the
 loop use Ctrl Z. The following two files are needed to run the example.
 
-test.ngc ---- #<test> = 123.352 o101 while [[#<test> MOD 60 ] NE 0]
-(debug,#<test>) #<test> = [#<test> + 1] 101 endwhile M2 ----
+FIXME: Some good soul please fix the whitespace for the examples below
 
-test.tbl ---- T1 P1 Z0.511 D0.125 ;1/8 end mill T2 P2 Z0.1 D0.0625 ;1/16
-end mill T3 P3 Z1.273 D0.201 ;#7 tap drill ----
+test.ngc
 
-command ---- rs274 -g test.ngc -t test.tbl ----
+----
+#<test> = 123.352 o101 while [[#<test> MOD 60 ] NE 0]
+(debug,#<test>) #<test> = [#<test> + 1] 101 endwhile M2
+----
+
+test.tbl
+
+----
+T1 P1 Z0.511 D0.125 ;1/8 end mill T2 P2 Z0.1 D0.0625 ;1/16
+end mill T3 P3 Z1.273 D0.201 ;#7 tap drill
+----
+
+command
+
+----
+rs274 -g test.ngc -t test.tbl
+----
 
 == SEE ALSO
 
