--- a/docs/src/man/man1/touchy.1.adoc
+++ b/docs/src/man/man1/touchy.1.adoc
@@ -6,22 +6,20 @@ touchy - TOUCHY LinuxCNC Graphical User Interface
 
 == SYNOPSIS
 
-*touchy* _-ini_ _<INI file>_
+*touchy* *-ini* _<INI file>_
 
 == DESCRIPTION
 
-*touchy* is one of the Graphical User Interfaces (GUI) for LinuxCNC. It
-gets run by the runscript usually.
+*touchy* is one of the Graphical User Interfaces (GUI) for LinuxCNC.
+It gets run by the runscript usually.
 
 == OPTIONS
 
 *INI file*::
-  The INI file is the main piece of an LinuxCNC configuration. It is not
-  the entire configuration; there are various other files that go with
-  it (NML files, HAL files, TBL files, VAR files). It is, however, the
-  most important one, because it is the file that holds the
-  configuration together. It can adjust a lot of parameters itself, but
-  it also tells *LinuxCNC* which other files to load and use.
+  The INI file is the main piece of an LinuxCNC configuration.
+  It is not the entire configuration; there are various other files that go with it (NML files, HAL files, TBL files, VAR files).
+  It is, however, the most important one, because it is the file that holds the configuration together.
+  It can adjust a lot of parameters itself, but it also tells *LinuxCNC* which other files to load and use.
 
 == SEE ALSO
 
