move remap to unclaimed Gcode in sim config at sim/axis/remap/stop-readahead

--- a/configs/sim/axis/remap/stop-lookahead/README
+++ b/configs/sim/axis/remap/stop-lookahead/README
@@ -5,10 +5,7 @@ See also this forum thread:
 
 Related:
 
-see 'G103 Lookahead Mode', page 152,
+see 'G103 Lookahead Mode' on some controllers
 
-PMAC-NC2 Pro2 Software reference, Delta Tau Systems Inc
-
-http://www.deltatau.com/manuals/pdfs/PMAC-NC%20PRO2.pdf?id=634701792253582640
 
 
