--- a/docs/src/gui/qtvcp-widgets.adoc
+++ b/docs/src/gui/qtvcp-widgets.adoc
@@ -54,6 +54,24 @@ Only programs that utilize the `xembed` protocol will work such as:
 
 Allows one to *adjust a HAL pin value using a sliding pointer*.
 
+[[sub:qtvcp:widgets:tabwidget]]
+=== `TabWidget` - Tab Widget
+This widget allows the tab height to be adjusted with stylesheets
+
+The `TabWidget` properties can be defined in a _stylesheet_ with the following code added to the `.qss` file. +
+`name_of_tab` being the widget name defined in Qt Designer's editor. +
+If you omit the '#name_of_tab' text, all TabWidgets tab height will be set. +
+This shows how to set a particular widget's tab height:
+
+[source,{css}]
+----
+TabWidget #name_of_tab{
+  qproperty-tabsize: 1.5;
+}
+----
+
+It is based on PyQt's QTabWidget
+
 [[sub:qtvcp:widgets:led]]
 === `LED` - Indicator Widget
 
@@ -421,6 +439,15 @@ You must set the *`digitCount`* property to an appropriate setting to display th
   A blank setting will allow the decimal to move as required.
 
 It is based on PyQt's _QLCDNumber_.
+
+[[sub:qtvcp:widgets:detachtabwidget]]
+=== 'DetachTabWidget' - Container Widget With User Detachable Panels
+This container widget works just like a QTabWidget -it displays multiple panels one at a time with tabs to select. +
+If you double click the tab or drag the tab, the tab will detach from the main window. +
+When a tab is detached, the contents are placed into a QDialog.  +
+The tab can be re-attached by closing the dialog or by double clicking on its window frame.
+
+It is based on PyQt's QTabWidget
 
 [[sub:qtvcp:widgets:doublescale]]
 === `DoubleScale` - Spin Button Entry Widget
