qtplasmac: remove deprecated conversion scripts
Removes deprecated conversion scripts that are no longer supported, as well as the accompanying documentation.

--- a/docs/src/man/man1/qtplasmac-materials.1.adoc
+++ b/docs/src/man/man1/qtplasmac-materials.1.adoc
@@ -24,7 +24,7 @@ http://linuxcnc.org/docs/devel/html/plasma/qtplasmac.html#_material_converter
 
 == AUTHOR
 
-Phillip Carter
+Phillip Carter & Gregory D Carl
 
 == LICENSE
 
