--- a/docs/src/plasma/qtplasmac.adoc
+++ b/docs/src/plasma/qtplasmac.adoc
@@ -349,115 +349,9 @@ IF THE USER INTENDS TO USE CUT VOLTAGES FROM A MANUFACTURE'S CUT CHART THEN IT W
 PLASMA CUTTING VOLTAGES CAN BE LETHAL, IF THE USER IS NOT EXPERIENCED IN DOING THESE MEASUREMENTS GET SOME QUALIFIED HELP.
 
 [[plasma:modify-config]]
-== Migrating to QtPlasmac From PlasmaC (AXIS or GMOCCAPY)
+== Migrating to QtPlasmaC From PlasmaC (AXIS or GMOCCAPY)
 
-There are two methods available to get from a working PlasmaC configuration to a new QtPlasmaC configuration.
-These methods assume the user is on LinuxCNC v2.9 or later, QtVCP is installed, and all dependency requirements are satisfied.
-
-If there are Qt dependency errors, the user should run the <<qt-dependency,QtVCP install script>>.
-
-=== Quick Method
-
-A quick method to move to QtPlasmaC from PlasmaC (loaded on top of either AXIS or GMOCCAPY) is to use the plasmac2qt conversion program,
-which will attempt to create a new QtPlasmaC configuration from an existing PlasmaC INI file.
-This program will convert the user's parameters, settings, and materials from the previous PlasmaC configuration
-and create a new QtPlasmaC configuration directory in the ~/linuxcnc/configs directory.
-
-This methods will keep the original PlasmaC config as a backup with _plasmac and a time stamp appended to the directory name.
-
-To run the plasmac2qt conversion program, use the following instructions:
-
-For a package installation (Buildbot) enter the following line in a terminal window:
-
-----
-qtplasmac-plasmac2qt
-----
-
-For a run in place installation enter the following lines in terminal window:
-
-----
-source ~/linuxcnc-dev/scripts/rip-environment
-qtplasmac-plasmac2qt
-----
-
-The following screen will be displayed:
-
-image::images/qtplasmac_plasmac2qt.png[width=500,align="center"]
-
-
-.*Mandatory Settings*
-[cols="4,10,6",options="header"]
-//[grid=none,frame=ends]
-|===
-|Field |Description |Examples
-|INI FILE IN EXISTING PLASMAC CONFIG |This is the INI file of the PlasmaC config that requires migrating. |_<machine_name>_.ini
-|MONITOR ASPECT RATIO |This is the <<plasma:formats, aspect ratio format>> for the GUI. |16:9
-|ESTOP |Selects the required E-stop type based on the following criteria: +
-0 - Estop is an indicator only. +
-1 - Estop indicator is hidden. +
-2 - Estop is a button. |ESTOP:1
-|===
-
-.*Optional Setting* - This setting is not required unless the machine has a <<plasma:laser,laser>> for sheet alignment. Leave this blank if it is not used/required.
-
-Leave this blank if it is not used/required.
-
-[width="100%",cols="4,10,6",options="header"]
-//[grid=none,frame=ends]
-|===
-|Field |Description |Examples
-|Laser On HAL Pin |Power on a laser crosshair for sheet alignment. |*Parallel Port Example:* parport.0.pin-16-out +
-*Mesa 7i96 Example:* hm2_7i96.0.ssr.00.out-00
-|===
-
-After filling in the appropriate entries, press *CONVERT*.
-
-[NOTE]
-This method will not change any existing debounce components to the new dbounce component.
-If the user wishes to change to the new dbounce component then the New Base Config method should be used for migration.
-
-=== New Base Config Method
-
-This method to move to QtPlasmaC from PlasmaC (loaded on top of either AXIS or GMOCCAPY) is to use a <<configuring,configuration wizard>> to create a new configuration.
-This method then allows changing of the base machine configuration at a later date via the configuration wizard,
-provided that the base INI and base HAL files have not been edited.
-
-This method requires that the user take note of all HAL pins used in the existing config so they can be entered into the configuration wizard.
-Any custom HAL commands will also need to be noted and added manually to either the custom.hal file or the custom_postgui.hal file,
-which will be created by the configuration wizard.
-
-After using the wizard, the user can then run a conversion program (cfg2prefs) to convert the parameters,
-settings, and materials from the previous PlasmaC configuration to the new QtPlasmaC configuration.
-This tool should be used immediately after the user has created a new QtPlasmaC configuration.
-
-Prior to running this conversion program,
-it is mandatory that the user have both an existing PlasmaC configuration and a new QtPlasmaC configuration.
-This program *will overwrite* the existing QtPlasmaC preferences and materials files,
-and should be used with caution if it is not being run on a new QtPlasmaC configuration.
-
-The program will create a time-stamped backup of the original preferences file and the existing materials file (if it exists).
-
-It will read the existing <machine_name>_config.cfg, <machine_name>_run.cfg, <machine_name>_wizards.cfg, and plasmac_stats.var files and write them to an existing _<machine_name>_.prefs file.
-It will also copy the <machine_name>_material.cfg file to the existing QtPlasmaC configuration.
-
-To run the cfg2prefs conversion program, use the following instructions:
-
-For a package installation (Buildbot) enter the following line in a terminal window:
-----
-qtplasmac-cfg2prefs
-----
-
-For a run in place installation enter the following lines in terminal window:
-----
-source ~/linuxcnc-dev/scripts/rip-environment
-qtplasmac-cfg2prefs
-----
-
-
-.`qtplasmac-cfg2prefs`
-image::images/qtplasmac_cfg2prefs.png[width=500,align="center"]
-
-Select the INI file of the old PlasmaC configuration, select the INI file of the new QtPlasmaC configuration, then press *CONVERT*.
+Automated migration to QtPlasmaC from PlasmaC is no longer supported. The user will either need to convert the PlasmaC configuration manually, or create a new configuration using the <<configuring,configuration wizard>>.
 
 == Other QtPlasmaC Setup Considerations
 
@@ -606,7 +500,7 @@ After a successful QtPlasmaC installation, the following files are created in th
 |custom_postgui.hal     |HAL file for user customization which is run after the GUI has initialized.
 |shutdown.hal           |HAL file which is run during the shutdown sequence.
 |tool.tbl               |Tool table used to store offset information for additional tools (scribe, etc.) used by the QtPlasmaC configuration.
-|qtplasmac              |Link to the directory containing common qtplasmac support files.
+|qtplasmac              |Link to the directory containing common QtPlasmaC support files.
 |backup                 |Directory for backups of config files.
 |===
 
@@ -3457,7 +3351,7 @@ n Code = toggle-halpin the-hal-pin-name ;; PIN\TOGGLED
 
 There are three <<plasma:ext-hal-pin,External HAL Pins>> that are available to toggle as an output,
 the pin names are `qtplasmac.ext_out_0`, `qtplasmac.ext_out_1`, and `qtplasmac.ext_out_2`.
-HAL connections to these HAL pins need to be specified in a postgui HAL file as the HAL pins are not available until the QtPlasmac GUI has loaded.
+HAL connections to these HAL pins need to be specified in a postgui HAL file as the HAL pins are not available until the QtPlasmaC GUI has loaded.
 
 For toggle-halpin buttons, it is possible for the user to mark the associated HAL pin as being required to be turned "ON" before starting a cut sequence by adding "cutcritical" after the HAL pin in the button code. If *TORCH ENABLE* is checked and *CYCLE START*, *MANUAL CUT*, or *SINGLE CUT* are initiated while the "cutcritical" button is not "ON" then the user will receive a dialog warning them as such and asking to CONTINUE or CANCEL.
 
@@ -3515,7 +3409,7 @@ The button color and the pin state will stay inverted until the pulse duration t
 An active pulse can be canceled by clicking the button again.
 
 There are three <<plasma:ext-hal-pin,External HAL Pins>> that are available to pulse as an output, the pin names are qtplasmac.ext_out_0, qtplasmac.ext_out_1, and qtplasmac.ext_out_2.
-HAL connections to these HAL pins need to be specified in a postgui HAL file as the HAL pins are not available until the QtPlasmac GUI has loaded.
+HAL connections to these HAL pins need to be specified in a postgui HAL file as the HAL pins are not available until the QtPlasmaC GUI has loaded.
 
 [[plasma:button-probe]]
 .Probe Test
@@ -3532,7 +3426,7 @@ n Code = probe-test 6
 ----
 
 [NOTE]
-Enabling a user button as a Probe Test button will add an <<plasma:ext-hal-pin,external HAL pin>> that may be connected from a pendant etc. HAL connections to this HAL pin needs to be specified in a postgui HAL file as the HAL pin is not available until the QtPlasmac GUI has loaded.
+Enabling a user button as a Probe Test button will add an <<plasma:ext-hal-pin,external HAL pin>> that may be connected from a pendant etc. HAL connections to this HAL pin needs to be specified in a postgui HAL file as the HAL pin is not available until the QtPlasmaC GUI has loaded.
 
 [[plasma:button-ohmic]]
 .Ohmic Test
@@ -3547,7 +3441,7 @@ n Code = ohmic-test
 
 [NOTE]
 Enabling a user button as an Ohmic Test button will add an <<plasma:ext-hal-pin,external HAL pin>> that may be connected from a pendant etc.
-HAL connections to this HAL pin needs to be specified in a postgui HAL file as the HAL pin is not available until the QtPlasmac GUI has loaded.
+HAL connections to this HAL pin needs to be specified in a postgui HAL file as the HAL pin is not available until the QtPlasmaC GUI has loaded.
 
 [[plasma:button-cut]]
 .Cut Type
@@ -3583,7 +3477,7 @@ n Code = change-consumables X10 Y10 F1000
 
 [NOTE]
 Enabling a user button as a Change Consumables button will add an <<plasma:ext-hal-pin,external HAL pin>> that may be connected from a pendant etc.
-HAL connections to this HAL pin needs to be specified in a postgui HAL file as the HAL pin is not available until the QtPlasmac GUI has loaded.
+HAL connections to this HAL pin needs to be specified in a postgui HAL file as the HAL pin is not available until the QtPlasmaC GUI has loaded.
 
 [[plasma:button-load]]
 .Load
@@ -3628,7 +3522,7 @@ n Code = torch-pulse 0.5
 
 [NOTE]
 Enabling a user button as a Torch Pulse button will add an <<plasma:ext-hal-pin,external HAL pin>> that may be connected from a pendant etc.
-HAL connections to this HAL pin needs to be specified in a postgui HAL file as the HAL pin is not available until the QtPlasmac GUI has loaded.
+HAL connections to this HAL pin needs to be specified in a postgui HAL file as the HAL pin is not available until the QtPlasmaC GUI has loaded.
 
 [[plasma:button-single]]
 .Single Cut
@@ -3694,7 +3588,7 @@ n Code = framing usecurrentzheight F100
 ----
 
 Enabling a user button as a framing button will add an <<plasma:ext-hal-pin,external HAL pin>> that may be connected from a pendant etc.
-HAL connections to this HAL pin needs to be specified in a postgui HAL file as the HAL pin is not available until the QtPlasmac GUI has loaded.
+HAL connections to this HAL pin needs to be specified in a postgui HAL file as the HAL pin is not available until the QtPlasmaC GUI has loaded.
 
 [[plasma:button-mancut]]
 .Manual Cut
@@ -3811,7 +3705,7 @@ and making an initial Z movement to bring the torch near the top of travel at th
 
 QtPlasmaC creates some HAL pins that may be used to connect a momentary external button or pendant etc.
 
-HAL connections to these HAL pins need to be specified in a postgui HAL file as the HAL pins are not available until the QtPlasmac GUI has loaded.
+HAL connections to these HAL pins need to be specified in a postgui HAL file as the HAL pins are not available until the QtPlasmaC GUI has loaded.
 
 The following HAL bit pins are always created. The HAL pin has the identical behaviour of the related QtPlasmaC GUI button.
 
@@ -4341,7 +4235,7 @@ $ ln -s qtplasmac_en.qm ../../qtplasmac_9x16/languages/
 
 QtPlasmaC will be translated to the language of the current locale on the next start so long as a .qm file exists in that language.
 
-Users are welcome to submit translation files for inclusion into QtPlasmac.
+Users are welcome to submit translation files for inclusion into QtPlasmaC.
 The preferred method is to submit a pull request from the users GitHub account as described in the https://www.linuxcnc.org/docs/html/code/contributing-to-linuxcnc.html[contributing to LinuxCNC] documentation.
 The only files required to be committed are qtplasmac_xx.ts and qtplasmac_xx.qm.
 
