--- a/docs/src/man/man1/xhc-whb04b-6.1.adoc
+++ b/docs/src/man/man1/xhc-whb04b-6.1.adoc
@@ -89,7 +89,7 @@ This standalone mode is used to identify the button codes produced for each butt
 `xhc-whb04b-6 -H`::
  Start in HAL mode (Normal mode for real machine use).
 `xhc-whb04b-6 -HsfB`::
- Start in HAL mode + Spindle Override + Feedrate Override + Big step 5/10&#8239;mm).
+ Start in HAL mode + Spindle Override + Feedrate Override + Big step (5/10&#8239;mm).
 
 == HAL Usage
 
