--- a/docs/src/man/man1/mqtt-publisher.1.adoc
+++ b/docs/src/man/man1/mqtt-publisher.1.adoc
@@ -38,7 +38,8 @@ debian this is available from the `python3-paho-mqtt` package.
 
     The name of HAL pins, signals and other values to publish using
     MQTT.  The names are also used as the JSON keys in the MQTT
-    message published with the broker.
+    message published with the broker.  If multiple keys options
+    are specified, the lists are merged.
 
 *--dryrun*::
 
@@ -101,16 +102,19 @@ a useful starting point:
       halui.axis.c.pos-feedback,halui.axis.u.pos-feedback,
       halui.axis.v.pos-feedback,halui.axis.w.pos-feedback,
       halui.axis.x.pos-feedback,halui.axis.y.pos-feedback,
-      halui.axis.z.pos-feedback,halui.estop.is-activated,
+      halui.axis.z.pos-feedback keys=halui.estop.is-activated,
       halui.joint.0.is-homed,halui.joint.1.is-homed,halui.joint.2.is-homed,
       halui.joint.3.is-homed,halui.joint.4.is-homed,halui.joint.5.is-homed,
-      halui.joint.6.is-homed,halui.joint.7.is-homed,halui.joint.8.is-homed,
-      halui.machine.is-on,halui.max-velocity.value,halui.mode.is-auto,
+      halui.joint.6.is-homed,halui.joint.7.is-homed,halui.joint.8.is-homed
+      keys=halui.machine.is-on,halui.max-velocity.value,halui.mode.is-auto,
       halui.mode.is-manual,halui.mode.is-mdi,halui.mode.is-teleop,
-      halui.program.is-running'
+      halui.program.is-running
 
-Note, the list of keys can not include space after comma.  The lines
+Note, the list of keys cannot include space after comma.  The lines
 are only broken here to avoid too long lines in the documentation.
+
+When called using loadusr, all options must be shorter than 255 characters.
+Multiple keys options can be used if necessary.
 
 == SEE ALSO
 
