Started to create an adoc man page for eachman page

--- a/docs/src/man/man3/hal_del_funct_from_thread.3.adoc
+++ b/docs/src/man/man3/hal_del_funct_from_thread.3.adoc
@@ -1,10 +1,10 @@
 :manvolnum: 3
 
-= hal_add_funct_to_thread(3hal)
+= hal_del_funct_from_thread(3hal)
 
 == NAME
 
-hal_add_funct_to_thread - cause a function to be executed at regular intervals
+hal_del_funct_from_thread - cause a function to be executed at regular intervals
 
 == SYNTAX
 
